--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon Marketing strategies</title>
   </head>
 
   <body>
@@ -31,10 +31,8 @@
     <figure class="hero"></figure>
     <article class="content">
       <!-- added id for search engine (fixed nav link) -->
-      <section
-        id="search-engine-optimization"
-        class="search-engine-optimization"
-      >
+      <section id="search-engine-optimization" class="section-txt">
+        <!--Generated Alt tags for IMG's -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
@@ -48,12 +46,10 @@
           visibility and find the right customers for your business.
         </p>
       </section>
-      <section
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
+      <section id="online-reputation-management" class="section-txt">
         <img
           src="./assets/images/online-reputation-management.jpg"
+          alt="Online reputation"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -65,9 +61,10 @@
           business.
         </p>
       </section>
-      <section id="social-media-marketing" class="social-media-marketing">
+      <section id="social-media-marketing" class="section-txt">
         <img
           src="./assets/images/social-media-marketing.jpg"
+          alt="Social Media Marketing"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -83,7 +80,7 @@
     <aside class="benefits">
       <section class="columright">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png" alt="lead Generation" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -91,7 +88,7 @@
       </section>
       <section class="columright">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -99,7 +96,7 @@
       </section>
       <section class="columright">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png" alt="Cost Management" />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
@@ -108,7 +105,7 @@
     </aside>
     <footer class="footer">
       <p id="foothead">Made with ❤️️ by Horiseon</p>
-      <p>2019 Horiseon Social Solution Services, Inc.</p>
+      <p>© 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
 </html>
