updated html tags and created ReadMe

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
     </aside>
     <footer class="footer">
       <p id="foothead">Made with ❤️️ by Horiseon</p>
-      <p>© 2019 Horiseon Social Solution Services, Inc.</p>
+      <!-- added small semantic -->
+      <small><p>© 2019 Horiseon Social Solution Services, Inc.</p></small>
     </footer>
   </body>
 </html>
