--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </header>
     <!-- changed div to figure -->
     <figure class="hero"></figure>
-    <article class="content">
+
+    <main class="content">
       <!-- added id for search engine (fixed nav link) -->
       <section id="search-engine-optimization" class="section-txt">
         <!--Generated Alt tags for IMG's -->
@@ -75,12 +76,15 @@
           your lead generation.
         </p>
       </section>
-    </article>
+    </main>
     <!-- added aside and section tags to replace div -->
     <aside class="benefits">
       <section class="columright">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" alt="lead Generation" />
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="lead Generation icon"
+        />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -88,7 +92,10 @@
       </section>
       <section class="columright">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="Brand Awareness icon"
+        />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -96,7 +103,10 @@
       </section>
       <section class="columright">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" alt="Cost Management" />
+        <img
+          src="./assets/images/cost-management.png"
+          alt="Cost Management icon"
+        />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
