added more comments and finalized the code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!--Generated Alt tags for IMG's -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
-          class="float-left"
+          class="float-left section-image"
           alt="workspace"
         />
         <h2>Search Engine Optimization</h2>
@@ -51,7 +51,7 @@
         <img
           src="./assets/images/online-reputation-management.jpg"
           alt="Online reputation"
-          class="float-right"
+          class="float-right section-image"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -66,7 +66,7 @@
         <img
           src="./assets/images/social-media-marketing.jpg"
           alt="Social Media Marketing"
-          class="float-left"
+          class="float-left section-image"
         />
         <h2>Social Media Marketing</h2>
         <p>
@@ -115,7 +115,7 @@
     </aside>
     <footer class="footer">
       <p id="foothead">Made with ❤️️ by Horiseon</p>
-      <!-- added small semantic -->
+      <!-- added small semantic tag -->
       <small><p>© 2019 Horiseon Social Solution Services, Inc.</p></small>
     </footer>
   </body>
